petya @TODO sudu

--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
   "size-limit": [
     {
       "path": "./index.js",
-      "limit": "23 B"
+      "limit": "25 B" // @TODO mol tak i syak
     }
   ],
   "browser": {
