--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "twofivefive",
-  "version": "1.0.0",
+  "version": "1.1.0",
   "description": "Demonstrating Size Limit",
   "main": "index.js",
   "scripts": {
@@ -10,7 +10,7 @@
   "author": "Your's truly",
   "license": "ISC",
   "devDependencies": {
-    "size-limit": "^0.8.4"
+    "size-limit": "^0.8.5"
   },
   "size-limit": [
     {
@@ -20,5 +20,8 @@
   ],
   "browser": {
     "./index.js": "./index.browser.js"
+  },
+  "server": {   /* add server node */
+    "./index.js": "./server.js"
   }
 }
